tests/pylint.conf: use jobs=0 to speed up tests

--- a/ubuntutools/test/pylint.conf
+++ b/ubuntutools/test/pylint.conf
@@ -3,6 +3,9 @@
 # Pickle collected data for later comparisons.
 persistent=no
 
+# Use all cpus, to speed up testing
+jobs=0
+
 
 [MESSAGES CONTROL]
 
