make ubuntu-dev-tools require matching version of python-ubuntutools
without specific version matching, a simple 'apt install ubuntu-dev-tools'
on a system with an older version of ubuntu-dev-tools and deps will leave
the older python-ubuntutools installed, which may not work with the updated
ubuntu-dev-tools code.

--- a/debian/control
+++ b/debian/control
@@ -61,10 +61,10 @@ Depends:
  python-httplib2,
  python-launchpadlib (>= 1.5.7),
  python-lazr.restfulclient,
- python-ubuntutools,
+ python-ubuntutools (= ${binary:Version}),
  python3,
  python3-distro-info,
- python3-ubuntutools,
+ python3-ubuntutools (= ${binary:Version}),
  sensible-utils,
  sudo,
  ${misc:Depends},
