Build-Depend on pylint (>= 2, the Python 3 version), it replaced pylint3.

--- a/debian/control
+++ b/debian/control
@@ -14,8 +14,7 @@ Build-Depends:
  distro-info (>= 0.2~),
  libwww-perl,
  lsb-release,
- pylint,
- pylint3,
+ pylint (>= 2),
  python-all (>= 2.6.5-13~),
  python-apt (>= 0.7.93~),
  python-debian (>= 0.1.20~),
