wrap-and-sort -ats

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,3 +1,4 @@
 Test-Command: set -ex ; for i in $(py3versions -s) ; do "$i" setup.py test; done
-Depends: @builddeps@
+Depends:
+ @builddeps@,
 Restrictions: allow-stderr
