Install pull-debian-source as python 3. It was ported, and doesn't work under python 2 any more. (LP: #1841127)

--- a/debian/control
+++ b/debian/control
@@ -62,6 +62,9 @@ Depends:
  python-launchpadlib (>= 1.5.7),
  python-lazr.restfulclient,
  python-ubuntutools,
+ python3,
+ python3-distro-info,
+ python3-ubuntutools,
  sensible-utils,
  sudo,
  ${misc:Depends},
