--- a/debian/control
+++ b/debian/control
@@ -54,6 +54,7 @@ Depends:
  distro-info (>= 0.2~),
  dpkg-dev,
  lsb-release,
+ python,
  python-apt (>= 0.7.93~),
  python-debian (>= 0.1.20~),
  python-distro-info (>= 0.4~),
@@ -65,7 +66,6 @@ Depends:
  sudo,
  ${misc:Depends},
  ${perl:Depends},
- ${python:Depends},
 Recommends:
  bzr | brz,
  bzr-builddeb | brz-debian,
