--- a/debian/control
+++ b/debian/control
@@ -64,6 +64,8 @@ Depends:
  python-ubuntutools,
  python3,
  python3-distro-info,
+ python3-httplib2,
+ python3-launchpadlib,
  python3-ubuntutools,
  sensible-utils,
  sudo,
