--- a/debian/control
+++ b/debian/control
@@ -63,6 +63,7 @@ Depends:
  python-lazr.restfulclient,
  python-ubuntutools,
  python3,
+ python3-apt,
  python3-distro-info,
  python3-httplib2,
  python3-launchpadlib,
