--- a/debian/control
+++ b/debian/control
@@ -64,6 +64,7 @@ Depends:
  python-ubuntutools,
  python3,
  python3-apt,
+ python3-debian,
  python3-distro-info,
  python3-httplib2,
  python3-launchpadlib,
