Update requestsync to python3 (Closes: #927147)

--- a/debian/control
+++ b/debian/control
@@ -87,7 +87,8 @@ Recommends:
  lintian,
  patch,
  pbuilder | cowbuilder | sbuild,
- python-dns,
+ python3-dns,
+ python3-launchpadlib,
  python-soappy,
  quilt,
  reportbug (>= 3.39ubuntu1),
