--- a/debian/control
+++ b/debian/control
@@ -24,11 +24,11 @@ Build-Depends:
  python-launchpadlib (>= 1.5.7),
  python-mock,
  python-setuptools,
- python-soappy,
  python-unittest2,
  python3-all,
  python3-apt,
  python3-debian,
+ python3-debianbts,
  python3-distro-info,
  python3-flake8,
  python3-httplib2,
@@ -87,8 +87,8 @@ Recommends:
  lintian,
  patch,
  pbuilder | cowbuilder | sbuild,
+ python3-debianbts,
  python3-dns,
- python-soappy,
  quilt,
  reportbug (>= 3.39ubuntu1),
  ubuntu-keyring | ubuntu-archive-keyring,
