d/t/control: change to test with flake8 and nosetests
Signed-off-by: Dan Streetman <ddstreet@canonical.com>

--- a/debian/tests/control
+++ b/debian/tests/control
@@ -1,4 +1,7 @@
-Test-Command: set -ex ; for i in $(py3versions -s) ; do "$i" setup.py test; done
-Depends:
- @builddeps@,
+Test-Command: flake8 -v --max-line-length=99 --extend-exclude=ubuntu-archive-assistant,ubuntu_archive_assistant
+Depends: flake8
+Restrictions: allow-stderr
+
+Test-Command: nosetests3 -v ubuntutools --with-coverage --cover-package=ubuntutools ubuntutools
+Depends: python3-nose, python3-nose-cov, python3-setuptools, @
 Restrictions: allow-stderr
