d/control: explicitly depends on tzdata
mk-sbuild would copy /etc/timezone and /etc/localtime from the host
environment, and it fails without them.

Signed-off-by: You-Sheng Yang <vicamo@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -55,6 +55,7 @@ Depends:
  python3-ubuntutools (= ${binary:Version}),
  sensible-utils,
  sudo,
+ tzdata,
  ${misc:Depends},
  ${perl:Depends},
 Recommends:
