--- a/debian/control
+++ b/debian/control
@@ -47,6 +47,7 @@ Depends:
  python3,
  python3-apt,
  python3-debian,
+ python3-debianbts,
  python3-distro-info,
  python3-httplib2,
  python3-launchpadlib,
