--- a/debian/control
+++ b/debian/control
@@ -57,6 +57,7 @@ Depends:
  ${misc:Depends},
  ${perl:Depends},
 Recommends:
+ arch-test,
  bzr | brz,
  bzr-builddeb | brz-debian,
  ca-certificates,
@@ -73,7 +74,6 @@ Recommends:
  quilt,
  reportbug (>= 3.39ubuntu1),
  ubuntu-keyring | ubuntu-archive-keyring,
- arch-test
 Suggests:
  qemu-user-static,
 Description: useful tools for Ubuntu developers
