--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends:
  devscripts (>= 2.11.0~),
  dh-python,
  distro-info (>= 0.2~),
- flake8 (>= 3.8.0),
+ flake8,
  lsb-release,
  python3-all,
  python3-apt,
