misc: Change download() method to use python requests and optional authentication
Since private PPAs require authentication, use python requests library instead
of urlopen(), since requests handles authentication easily

--- a/debian/control
+++ b/debian/control
@@ -139,6 +139,7 @@ Depends:
  python3-httplib2,
  python3-launchpadlib,
  python3-lazr.restfulclient,
+ python3-requests,
  sensible-utils,
  ${misc:Depends},
  ${python3:Depends},
