Replace nose with pytest (see: #997758).

--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Build-Depends:
  python3-distro-info,
  python3-httplib2,
  python3-launchpadlib,
- python3-nose,
+ python3-pytest,
  python3-requests <!nocheck>,
  python3-setuptools,
 Standards-Version: 4.6.0
