--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8,nose
+envlist = flake8,pytest
 skipsdist = True
 
 [testenv]
@@ -14,8 +14,8 @@ install_command = pip install {opts} {packages}
 [testenv:flake8]
 commands = flake8 {posargs}
 
-[testenv:nose]
-commands = nosetests -v --with-coverage --cover-package=ubuntutools {posargs:ubuntutools}
+[testenv:pytest]
+commands = pytest -v --cov=ubuntutools {posargs:ubuntutools}
 
 [flake8]
 verbose = 2
