--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,10 @@
 [MASTER]
 
+# A comma-separated list of package or module names from where C extensions may
+# be loaded. Extensions are loading into the active Python interpreter and may
+# run arbitrary code.
+extension-pkg-allow-list=apt_pkg
+
 # Pickle collected data for later comparisons.
 persistent=no
 
@@ -22,21 +27,13 @@ confidence=HIGH
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=locally-disabled
+disable=fixme,locally-disabled,missing-docstring
 
 
 [REPORTS]
 
 # Tells whether to display a full report or only the messages
 reports=no
-
-
-[TYPECHECK]
-
-# List of classes names for which member attributes should not be checked
-# (useful for classes with attributes dynamically set).
-# lpapicache classes, urlparse
-ignored-classes=Launchpad,BaseWrapper,PersonTeam,Distribution,Consumer,Credentials,ParseResult,apt_pkg,apt_pkg.Dependency,apt_pkg.BaseDependency
 
 
 [FORMAT]
@@ -52,4 +49,10 @@ indent-string='    '
 [BASIC]
 
 # Allow variables called e, f, lp
-good-names=i,j,k,ex,Run,_,e,f,lp
+good-names=i,j,k,ex,Run,_,e,f,lp,me,to
+
+
+[IMPORTS]
+
+# Force import order to recognize a module as part of a third party library.
+known-third-party=debian
