Implement refactorings found by pylint
Signed-off-by: Benjamin Drung <benjamin.drung@canonical.com>

--- a/.pylintrc
+++ b/.pylintrc
@@ -27,7 +27,7 @@ confidence=HIGH
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=fixme,locally-disabled,missing-docstring
+disable=fixme,locally-disabled,missing-docstring,useless-option-value
 
 
 [REPORTS]
