--- a/.pylintrc
+++ b/.pylintrc
@@ -14,10 +14,6 @@ jobs=0
 
 [MESSAGES CONTROL]
 
-# Only show warnings with the listed confidence levels. Leave empty to show
-# all. Valid levels: HIGH, INFERENCE, INFERENCE_FAILURE, UNDEFINED
-confidence=HIGH
-
 # Disable the message, report, category or checker with the given id(s). You
 # can either give multiple identifiers separated by comma (,) or put this
 # option multiple times (only on the command line, not in the configuration
@@ -27,7 +23,18 @@ confidence=HIGH
 # --enable=similarities". If you want to run only the classes checker, but have
 # no Warning level messages displayed, use"--disable=all --enable=classes
 # --disable=W"
-disable=fixme,locally-disabled,missing-docstring,useless-option-value
+disable=fixme,locally-disabled,missing-docstring,useless-option-value,
+  # TODO: Fix all following disabled checks!
+  invalid-name,
+  consider-using-with,
+  too-many-arguments,
+  too-many-branches,
+  too-many-statements,
+  too-many-locals,
+  duplicate-code,
+  too-many-instance-attributes,
+  too-many-nested-blocks,
+  too-many-lines,
 
 
 [REPORTS]
