running-autopkgtests: make running-autopkgtests available
Previously running-autopkgtests was added to the source but
wasn't correctly added to the scripts in setup.py, so it wasn't
actually available in the installed package. This also adds the
script to the package description.

--- a/debian/control
+++ b/debian/control
@@ -116,6 +116,8 @@ Description: useful tools for Ubuntu developers
   - requestsync - files a sync request with Debian changelog and rationale.
   - reverse-depends - find the reverse dependencies (or build dependencies) of
     a package.
+  - running-autopkgtests - lists the currently running and/or queued
+    autopkgtests on the Ubuntu autopkgtest infrastructure
   - seeded-in-ubuntu - query if a package is safe to upload during a freeze.
   - setup-packaging-environment - assistant to get an Ubuntu installation
     ready for packaging work.
