--- a/debian/control
+++ b/debian/control
@@ -54,7 +54,7 @@ Depends:
  python3-debianbts,
  python3-distro-info,
  python3-httplib2,
- python3-launchpadlib-desktop,
+ python3-launchpadlib,
  python3-lazr.restfulclient,
  python3-ubuntutools (= ${binary:Version}),
  sensible-utils,
