--- a/debian/rules
+++ b/debian/rules
@@ -3,7 +3,7 @@
 override_dh_auto_clean:
 	dh_auto_clean
 	rm -f .coverage
-	rm -rf .tox
+	rm -rf .mypy_cache .tox
 
 override_dh_auto_test:
 ifeq (,$(filter nocheck,$(DEB_BUILD_OPTIONS)))
